--- a/index.html
+++ b/index.html
@@ -27,8 +27,120 @@
 
 <!-- header -->
 
+<header class="section-header">
+    <div class="section-logo">
+        <p class="logo">En l'air</p>
+        <p class="dance-club">
+            lifestyle dance club
+        </p>    
+    </div>
+    <nav class="nav-list">
+        <div class="nav-item">
+            <a href="">Направления</a>
+        </div>
+        <div class="nav-item">
+            <a href="">Расписание</a>
+        </div>
+        <div class="nav-item">
+            <a href="">Абонементы</a>
+        </div>
+        <div class="nav-item">
+            <a href="">Преподователи</a>
+        </div>
+        <div class="nav-item">
+            <a href="">Контакты</a>
+        </div>
+    </nav>
+</header>
+
 <main>
 
+    <section class="section-hero">
+        <div class="container">
+            <div class="background-black">
+                <div class="slider">
+                    <div class="slider-item"></div>
+                    <div class="slider-item"></div>
+                    <div class="slider-item"></div>
+                    <div class="slider-item-action"></div>
+                    <div class="slider-item"></div>
+                </div>
+                <div class="hero-block">
+                    <h1>
+                        Время новых увлечений!
+                    </h1>
+                    <p>
+                        Специальное предлжение для студентов - En l'air дарит скидку - 20% на базовую карту!
+                    </p>
+                    <button>
+                        ПОДРОБНЕЕ
+                    </button>
+                    <button>
+                        ВСЕ АКЦИИ
+                    </button>
+                </div>
+                <p>
+                    Спецпредложение для молодоженов  
+                </p>
+                <p>
+                    Постановка свадебного танца и два месяцв клубного членства для пары.... <span>ПОДРОБНЕЕ</span> 
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-direction">
+        <div class="title">
+            <h2 class="direction-title">
+                НАПРАВЛЕНИЯ
+            </h2>
+            <p class="double-title">
+                НАПРАВЛЕНИЯ
+            </p>
+        </div>
+        <div class="cards-direction-list">
+
+            <div class="cards-direction-item">
+                <p class="name-direction">
+                    Dance Mix
+                </p>
+                <div class="button-list">
+                    <button class="btn-yellow">
+                        Записаться
+                    </button>
+                    <button class="btn-transparent">
+                        Подробнее
+                    </button>
+                </div>
+            </div>
+
+
+        </div>
+
+    </section>
+
+    <section class="section-studio">
+        <div class="title">
+            <h2 class="direction-title">
+                Наши студии
+            </h2>
+            <p class="double-title">
+                Наши студии
+            </p>
+        </div>
+
+        <div class="img-section-studio">
+            <div class="studio-list">
+
+                <div class="studio-item">
+                    
+                </div>
+
+            </div>
+        </div>
+
+
+    </section>
 
 </main>
 
