--- a/index.html
+++ b/index.html
@@ -28,29 +28,31 @@
 <!-- header -->
 
 <header class="section-header">
-    <div class="section-logo">
-        <p class="logo">En l'air</p>
-        <p class="dance-club">
-            lifestyle dance club
-        </p>    
+    <div class="container">
+        <div class="section-logo">
+            <p class="logo">En l'air</p>
+            <p class="dance-club">
+                lifestyle dance club
+            </p>    
+        </div>
+        <nav class="nav-list">
+            <div class="nav-item">
+                <a href="">Направления</a>
+            </div>
+            <div class="nav-item">
+                <a href="">Расписание</a>
+            </div>
+            <div class="nav-item">
+                <a href="">Абонементы</a>
+            </div>
+            <div class="nav-item">
+                <a href="">Преподователи</a>
+            </div>
+            <div class="nav-item">
+                <a href="">Контакты</a>
+            </div>
+        </nav>
     </div>
-    <nav class="nav-list">
-        <div class="nav-item">
-            <a href="">Направления</a>
-        </div>
-        <div class="nav-item">
-            <a href="">Расписание</a>
-        </div>
-        <div class="nav-item">
-            <a href="">Абонементы</a>
-        </div>
-        <div class="nav-item">
-            <a href="">Преподователи</a>
-        </div>
-        <div class="nav-item">
-            <a href="">Контакты</a>
-        </div>
-    </nav>
 </header>
 
 <main>
@@ -89,7 +91,7 @@
         </div>
     </section>
 
-    <section class="section-direction">
+    <section class="section-direction container">
         <div class="title">
             <h2 class="direction-title">
                 НАПРАВЛЕНИЯ
@@ -98,22 +100,107 @@
                 НАПРАВЛЕНИЯ
             </p>
         </div>
+
+    </section>
+
+    <section class="cards-direction container">
         <div class="cards-direction-list">
 
             <div class="cards-direction-item">
-                <p class="name-direction">
-                    Dance Mix
-                </p>
-                <div class="button-list">
-                    <button class="btn-yellow">
-                        Записаться
-                    </button>
-                    <button class="btn-transparent">
-                        Подробнее
-                    </button>
+                <div class="cards-item-img">
+                    <p class="name-direction">
+                        Dance Mix
+                    </p>
+                    <div class="button-list">
+                        <button class="btn-yellow">
+                            Записаться
+                        </button>
+                        <button class="btn-transparent">
+                            Подробнее
+                        </button>
+                    </div>
                 </div>
             </div>
 
+            <div class="cards-direction-item">
+                <div class="cards-item-img">
+                    <p class="name-direction">
+                        ДЛЯ ДЕТЕЙ 
+                    </p>
+                    <div class="button-list">
+                        <button class="btn-yellow">
+                            Записаться
+                        </button>
+                        <button class="btn-transparent">
+                            Подробнее
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cards-direction-item">
+                <div class="cards-item-img">
+                    <p class="name-direction">                    
+                        CARIBBEAN MIX
+                    </p>
+                    <div class="button-list">
+                        <button class="btn-yellow">
+                            Записаться
+                        </button>
+                        <button class="btn-transparent">
+                            Подробнее
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cards-direction-item">
+                <div class="cards-item-img">
+                    <p class="name-direction">
+                        Pole Dance
+                    </p>
+                    <div class="button-list">
+                        <button class="btn-yellow">
+                            Записаться
+                        </button>
+                        <button class="btn-transparent">
+                            Подробнее
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cards-direction-item">
+                <div class="cards-item-img">
+                    <p class="name-direction">
+                        Sky Jumping
+                    </p>
+                    <div class="button-list">
+                        <button class="btn-yellow">
+                            Записаться
+                        </button>
+                        <button class="btn-transparent">
+                            Подробнее
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cards-direction-item">
+                <div class="cards-item-img">
+                    <p class="name-direction">
+                        HIP-HOP
+                    </p>
+                    <div class="button-list">
+                        <button class="btn-yellow">
+                            Записаться
+                        </button>
+                        <button class="btn-transparent">
+                            Подробнее
+                        </button>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
@@ -121,24 +208,187 @@
 
     <section class="section-studio">
         <div class="title">
-            <h2 class="direction-title">
+            <h2 class="studio-title">
                 Наши студии
             </h2>
             <p class="double-title">
                 Наши студии
             </p>
         </div>
+    </section>
 
-        <div class="img-section-studio">
+    <section class="section-studio-img">
+        <div class="container">
             <div class="studio-list">
 
                 <div class="studio-item">
-                    
+                    <div class="text-item">
+                        <p class="studio-item-title">
+                            Открытая сезонная площадка  
+                        </p>
+                        <p class="studio-description-accent">
+                            График  работы уточнять по телефону!  
+                        </p>
+                    </div>
+                    <div class="contact-studio">
+                        <!-- Иконка -->
+                        <p>
+                            8 (499) 685-15-12
+                        </p>
+                    </div>
+                    <div class="contact-studio">
+                        <!-- Иконка -->
+                        <p>
+                            г. Москва ул. Балтийская 9
+                        </p>
+                    </div>
+                </div>
+
+                <div class="studio-item">
+                    <div class="text-item">
+                        <p class="studio-item-title">
+                            Школа около м. Коломенская  
+                        </p>
+                        <p class="studio-description">
+                            График  работы: каждый день с 10 до 23.00, без выходных, без перерыва 
+                        </p>
+                    </div>
+                    <div class="contact-studio">
+                        <!-- Иконка -->
+                        <p>
+                            8 (499) 685-15-22
+                        </p>
+                    </div>
+                    <div class="contact-studio">
+                        <!-- Иконка -->
+                        <p>
+                            г. Москва ул. Андропова, 33
+                        </p>
+                    </div>
+                </div>
+
+                <div class="studio-item">
+                    <div class="text-item">
+                        <p class="studio-item-title">
+                            Малый зал  
+                        </p>
+                        <p class="studio-description">
+                            График  работы: каждый день с 10 до 23.00, без выходных, без перерыва 
+                        </p>
+                    </div>
+                    <div class="contact-studio">
+                        <!-- Иконка -->
+                        <p>
+                            8 (499) 685-15-33
+                        </p>
+                    </div>
+                    <div class="contact-studio">
+                        <!-- Иконка -->
+                        <p>
+                            г. Москва ул.  Херсонская, 43 
+                        </p>
+                    </div>
                 </div>
 
             </div>
         </div>
+    </section>
 
+    <section class="section-subscriptions container">
+        <div class="title">
+            <h2 class="subscriptions-title">
+                Абонементы
+            </h2>
+            <p class="double-title">
+                Абонементы
+            </p>
+        </div>
+    </section>
+
+    <section class="container">
+        <div class="subscriptions-img">
+            <p>
+                Первое занятие - бесплатно!
+            </p>
+            <button>
+                Записаться
+            </button>
+        </div>
+
+        <div class="subscriptions-list">
+
+            <div class="subscriptions-item">
+                <div class="subscriptions-pouring">
+                    <p class="title-subscriptions">
+                        МИНИМАЛЬНЫЙ
+                    </p>
+                    <p class="description-subscriptions">
+                        Количество и время занятий: 4 любых занятия (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию. Срок действия: 30 календарных дней, с момента преобретения
+                    </p>
+                    <div>
+                        <div class="price-subscriptions">
+                            <p class="price">
+                                Цена:
+                            </p>
+                            <p class="price-accent">
+                                4000
+                            </p>
+                        </div>
+                        <button class="buy">
+                            Купить
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="subscriptions-item">
+                <div class="subscriptions-pouring">
+                    <p class="title-subscriptions">
+                        СТАНДАРТНЫЙ
+                    </p>
+                    <p class="description-subscriptions">
+                        Количество и время занятий: 8 любых занятий (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию. Срок действия: 30 календарных дней, с момента преобретения
+                    </p>
+                    <div>
+                        <div class="price-subscriptions">
+                            <p class="price">
+                                Цена:
+                            </p>
+                            <p class="price-accent">
+                                7400
+                            </p>
+                        </div>
+                        <button class="buy">
+                            Купить
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="subscriptions-item">
+                <div class="subscriptions-pouring">
+                    <p class="title-subscriptions">
+                        БЕЗЛИМИТНЫЙ
+                    </p>
+                    <p class="description-subscriptions">
+                        Количество и время занятий:  любое колличество занятий (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию, в течение 30 календарных дней. Срок действия: 30 календарных дней, с момента преобретения
+                    </p>
+                    <div>
+                        <div class="price-subscriptions">
+                            <p class="price">
+                                Цена:
+                            </p>
+                            <p class="price-accent">
+                                14000
+                            </p>
+                        </div>
+                        <button class="buy">
+                            Купить
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
 
@@ -146,6 +396,72 @@
 
 <!-- footer -->
 
+<section class="footer-section">
+    <div class="container">
+        <div class="messengers">
+            <p class="title-messengers">
+                НАШИ СОЦСЕТИ
+            </p>
+            <!-- иконка фейсбука
+            иконка инсты
+            иконка ютуба -->
+        </div>
+    </div>
+
+    <div class="menu-footer">
+        <div class="section-logo">
+            <p class="logo">En l'air</p>
+            <p class="dance-club">
+                lifestyle dance club
+            </p>    
+        </div>
+        <div class="menu-list">
+            <p class="menu-item">
+                Направления
+            </p>
+            <p class="menu-item">
+                Расписание
+            </p>
+            <p class="menu-item">
+                Абонементы
+            </p>
+            <p class="menu-item">
+                Преподаватели
+            </p>
+        </div>
+
+        <div>
+            <p class="title-contacts">
+                КОНТАКТЫ:
+            </p>    
+        </div>
+        <div class="contacts-footer-list">
+            <div class="address-list contacts-footer-item">
+                <p class="address-item">
+                    г. Москва ул. Андропова, 33 
+                </p>
+                <p class="address-item">
+                    г. Москва ул. Балтийская 9 
+                </p>
+                <p class="address-item">
+                    г. Москва ул.  Херсонская, 43 
+                </p>
+            </div>
+
+            <div class="telephone-list contacts-footer-item">
+                <p class="telephone-item">
+                    8 (499) 685-15-22 
+                </p>
+                <p class="telephone-item">
+                    8 (499) 685-15-12 
+                </p>
+                <p class="telephone-item">
+                    8 (499) 685-15-33
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
