header + hero | без мобвер

--- a/index.html
+++ b/index.html
@@ -27,69 +27,81 @@
 
 <!-- header -->
 
-<header class="section-header">
-    <div class="container">
-        <div class="section-logo">
-            <p class="logo">En l'air</p>
-            <p class="dance-club">
-                lifestyle dance club
-            </p>    
+<div class="background-img">
+    <section class="section-header">
+        <div class="container">
+            <header class="header">
+                <div class="section-logo">
+                    <p class="logo">
+                       <a class="link-logo" href="/index.html">En l'air</a>
+                    </p>
+                    <p class="dance-club">
+                        lifestyle dance club
+                    </p>    
+                </div>
+                <nav class="nav-list">
+                    <div class="nav-item">
+                        <a href="">Направления</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="">Расписание</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="">Абонементы</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="">Преподаватели</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="">Контакты</a>
+                    </div>
+                </nav>
+            </header>
         </div>
-        <nav class="nav-list">
-            <div class="nav-item">
-                <a href="">Направления</a>
-            </div>
-            <div class="nav-item">
-                <a href="">Расписание</a>
-            </div>
-            <div class="nav-item">
-                <a href="">Абонементы</a>
-            </div>
-            <div class="nav-item">
-                <a href="">Преподователи</a>
-            </div>
-            <div class="nav-item">
-                <a href="">Контакты</a>
-            </div>
-        </nav>
-    </div>
-</header>
-
-<main>
+    </section>
 
     <section class="section-hero">
         <div class="container">
             <div class="background-black">
-                <div class="slider">
-                    <div class="slider-item"></div>
-                    <div class="slider-item"></div>
-                    <div class="slider-item"></div>
-                    <div class="slider-item-action"></div>
-                    <div class="slider-item"></div>
+                <div class="slider-hero-block">
+                    <div class="slider">
+                        <div class="slider-item"></div>
+                        <div class="slider-item"></div>
+                        <div class="slider-item"></div>
+                        <div class="slider-item slider-item-action"></div>
+                        <div class="slider-item"></div>
+                    </div>
+                    <div class="hero-block">
+                        <h1 class="hero-title">
+                            Время новых увлечений!
+                        </h1>
+                        <p class="hero-description">
+                            Специальное предлжение для студентов - En l'air дарит скидку - 20% на базовую карту!
+                        </p>
+                        <div class="hero-button">
+                            <button class="btn hero-btn">
+                                ПОДРОБНЕЕ
+                            </button>
+                            <button class="btn hero-btn-accent">
+                                ВСЕ АКЦИИ
+                            </button>
+                        </div>
+                    </div>
                 </div>
-                <div class="hero-block">
-                    <h1>
-                        Время новых увлечений!
-                    </h1>
-                    <p>
-                        Специальное предлжение для студентов - En l'air дарит скидку - 20% на базовую карту!
+                <div class="offer">
+                    <p class="offer-title">
+                        Спецпредложение для молодоженов  
                     </p>
-                    <button>
-                        ПОДРОБНЕЕ
-                    </button>
-                    <button>
-                        ВСЕ АКЦИИ
-                    </button>
+                    <p class="offer-description">
+                        Постановка свадебного танца и два месяцв клубного членства для пары.... <span class="offer-description-accent">ПОДРОБНЕЕ</span> 
+                    </p>
                 </div>
-                <p>
-                    Спецпредложение для молодоженов  
-                </p>
-                <p>
-                    Постановка свадебного танца и два месяцв клубного членства для пары.... <span>ПОДРОБНЕЕ</span> 
-                </p>
             </div>
         </div>
     </section>
+</div>
+
+<main>
 
     <section class="section-direction container">
         <div class="title">
@@ -201,9 +213,7 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
     </section>
 
     <section class="section-studio">
