--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="slider-item"></div>
                         <div class="slider-item"></div>
                         <div class="slider-item"></div>
-                        <div class="slider-item slider-item-action"></div>
+                        <div class="slider-item"></div>
                         <div class="slider-item"></div>
                     </div>
                     <div class="hero-block">
