--- a/index.html
+++ b/index.html
@@ -103,16 +103,17 @@
 
 <main>
 
-    <section class="section-direction container">
-        <div class="title">
-            <h2 class="direction-title">
-                НАПРАВЛЕНИЯ
-            </h2>
-            <p class="double-title">
-                НАПРАВЛЕНИЯ
-            </p>
+    <section class="section-background section-direction">
+        <div class="container">
+            <div class="title">
+                <h2 class="direction-title">
+                    НАПРАВЛЕНИЯ
+                </h2>
+                <p class="double-title">
+                    НАПРАВЛЕНИЯ
+                </p>
+            </div>
         </div>
-
     </section>
 
     <section class="cards-direction container">
@@ -216,14 +217,16 @@
         </div>
     </section>
 
-    <section class="section-studio">
-        <div class="title">
-            <h2 class="studio-title">
-                Наши студии
-            </h2>
-            <p class="double-title">
-                Наши студии
-            </p>
+    <section class="section-background section-studio">
+        <div class="container">
+            <div class="title">
+                <h2 class="studio-title">
+                    Наши студии
+                </h2>
+                <p class="double-title">
+                    Наши студии
+                </p>
+            </div>
         </div>
     </section>
 
@@ -304,14 +307,16 @@
         </div>
     </section>
 
-    <section class="section-subscriptions container">
-        <div class="title">
-            <h2 class="subscriptions-title">
-                Абонементы
-            </h2>
-            <p class="double-title">
-                Абонементы
-            </p>
+    <section class="section-background section-subscriptions">
+        <div class="container">
+            <div class="title">
+                <h2 class="subscriptions-title">
+                    Абонементы
+                </h2>
+                <p class="double-title">
+                    Абонементы
+                </p>
+            </div>
         </div>
     </section>
 
