--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
 
     <section class="section-hero">
-        <div class="container">
+        <div class="container container-header">
             <div class="background-black">
                 <div class="slider-hero-block">
                     <div class="slider">
