Направления | без моб.в

--- a/index.html
+++ b/index.html
@@ -116,101 +116,103 @@
         </div>
     </section>
 
-    <section class="cards-direction container">
-        <div class="cards-direction-list">
+    <section class="cards-direction section-background">
+        <div class="container">
+            <div class="cards-direction-list">
 
-            <div class="cards-direction-item">
-                <div class="cards-item-img">
-                    <p class="name-direction">
-                        Dance Mix
-                    </p>
-                    <div class="button-list">
-                        <button class="btn-yellow">
-                            Записаться
-                        </button>
-                        <button class="btn-transparent">
-                            Подробнее
-                        </button>
+                <div class="cards-direction-item">
+                    <div class="cards-item-img cards-dance-mix">
+                        <p class="name-direction">
+                            <span class="accent-direction"> Dance Mix </span>
+                        </p>
+                        <div class="button-list">
+                            <button class="btn btn-yellow">
+                                Записаться
+                            </button>
+                            <button class="btn-transparent">
+                                Подробнее
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="cards-direction-item">
-                <div class="cards-item-img">
-                    <p class="name-direction">
-                        ДЛЯ ДЕТЕЙ 
-                    </p>
-                    <div class="button-list">
-                        <button class="btn-yellow">
-                            Записаться
-                        </button>
-                        <button class="btn-transparent">
-                            Подробнее
-                        </button>
+                <div class="cards-direction-item">
+                    <div class="cards-item-img cards-children">
+                        <p class="name-direction">
+                            <span class="accent-direction">ДЛЯ ДЕТЕЙ</span>
+                        </p>
+                        <div class="button-list">
+                            <button class="btn-yellow">
+                                Записаться
+                            </button>
+                            <button class="btn-transparent">
+                                Подробнее
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="cards-direction-item">
-                <div class="cards-item-img">
-                    <p class="name-direction">                    
-                        CARIBBEAN MIX
-                    </p>
-                    <div class="button-list">
-                        <button class="btn-yellow">
-                            Записаться
-                        </button>
-                        <button class="btn-transparent">
-                            Подробнее
-                        </button>
+                <div class="cards-direction-item">
+                    <div class="cards-item-img cards-caribbean-mix">
+                        <p class="name-direction">                    
+                            <span class="accent-direction">CARIBBEAN MIX</span>
+                        </p>
+                        <div class="button-list">
+                            <button class="btn-yellow">
+                                Записаться
+                            </button>
+                            <button class="btn-transparent">
+                                Подробнее
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="cards-direction-item">
-                <div class="cards-item-img">
-                    <p class="name-direction">
-                        Pole Dance
-                    </p>
-                    <div class="button-list">
-                        <button class="btn-yellow">
-                            Записаться
-                        </button>
-                        <button class="btn-transparent">
-                            Подробнее
-                        </button>
+                <div class="cards-direction-item">
+                    <div class="cards-item-img cards-pole-dance">
+                        <p class="name-direction">
+                            <span class="accent-direction">Pole Dance</span>
+                        </p>
+                        <div class="button-list">
+                            <button class="btn-yellow">
+                                Записаться
+                            </button>
+                            <button class="btn-transparent">
+                                Подробнее
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="cards-direction-item">
-                <div class="cards-item-img">
-                    <p class="name-direction">
-                        Sky Jumping
-                    </p>
-                    <div class="button-list">
-                        <button class="btn-yellow">
-                            Записаться
-                        </button>
-                        <button class="btn-transparent">
-                            Подробнее
-                        </button>
+                <div class="cards-direction-item">
+                    <div class="cards-item-img cards-sky-jumping">
+                        <p class="name-direction">
+                            <span class="accent-direction">Sky Jumping</span>
+                        </p>
+                        <div class="button-list">
+                            <button class="btn-yellow">
+                                Записаться
+                            </button>
+                            <button class="btn-transparent">
+                                Подробнее
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="cards-direction-item">
-                <div class="cards-item-img">
-                    <p class="name-direction">
-                        HIP-HOP
-                    </p>
-                    <div class="button-list">
-                        <button class="btn-yellow">
-                            Записаться
-                        </button>
-                        <button class="btn-transparent">
-                            Подробнее
-                        </button>
+                <div class="cards-direction-item">
+                    <div class="cards-item-img cards-hip-hop">
+                        <p class="name-direction">
+                            <span class="accent-direction">HIP-HOP</span>
+                        </p>
+                        <div class="button-list">
+                            <button class="btn-yellow">
+                                Записаться
+                            </button>
+                            <button class="btn-transparent">
+                                Подробнее
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
