Наши студии, баннер

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
         </div>
     </section>
 
+    <!-- Направления -->
+
     <section class="cards-direction section-background">
         <div class="container">
             <div class="cards-direction-list">
@@ -219,6 +221,8 @@
         </div>
     </section>
 
+    <!-- Наши студии -->
+
     <section class="section-background section-studio">
         <div class="container">
             <div class="title">
@@ -245,17 +249,19 @@
                             График  работы уточнять по телефону!  
                         </p>
                     </div>
-                    <div class="contact-studio">
-                        <!-- Иконка -->
-                        <p>
-                            8 (499) 685-15-12
-                        </p>
-                    </div>
-                    <div class="contact-studio">
-                        <!-- Иконка -->
-                        <p>
-                            г. Москва ул. Балтийская 9
-                        </p>
+                    <div class="contact">
+                        <div class="contact-studio">
+                            <i class="fa-solid fa-square-phone icon-contact"></i>
+                            <p class="phone-adress">
+                                8 (499) 685-15-12
+                            </p>
+                        </div>
+                        <div class="contact-studio">
+                            <i class="fa-solid fa-map-location-dot icon-contact"></i>
+                            <p class="phone-adress">
+                                г. Москва ул. Балтийская 9
+                            </p>
+                        </div>
                     </div>
                 </div>
 
@@ -268,17 +274,19 @@
                             График  работы: каждый день с 10 до 23.00, без выходных, без перерыва 
                         </p>
                     </div>
-                    <div class="contact-studio">
-                        <!-- Иконка -->
-                        <p>
-                            8 (499) 685-15-22
-                        </p>
-                    </div>
-                    <div class="contact-studio">
-                        <!-- Иконка -->
-                        <p>
-                            г. Москва ул. Андропова, 33
-                        </p>
+                    <div class="contact">
+                        <div class="contact-studio">
+                            <i class="fa-solid fa-square-phone icon-contact"></i>
+                            <p class="phone-adress">
+                                8 (499) 685-15-22
+                            </p>
+                        </div>
+                        <div class="contact-studio">
+                            <i class="fa-solid fa-map-location-dot icon-contact"></i>
+                            <p class="phone-adress">
+                                г. Москва ул. Андропова, 33
+                            </p>
+                        </div>
                     </div>
                 </div>
 
@@ -291,23 +299,27 @@
                             График  работы: каждый день с 10 до 23.00, без выходных, без перерыва 
                         </p>
                     </div>
-                    <div class="contact-studio">
-                        <!-- Иконка -->
-                        <p>
-                            8 (499) 685-15-33
-                        </p>
-                    </div>
-                    <div class="contact-studio">
-                        <!-- Иконка -->
-                        <p>
-                            г. Москва ул.  Херсонская, 43 
-                        </p>
+                    <div class="contact">
+                        <div class="contact-studio">
+                            <i class="fa-solid fa-square-phone icon-contact"></i>
+                            <p class="phone-adress">
+                                8 (499) 685-15-33
+                            </p>
+                        </div>
+                        <div class="contact-studio">
+                            <i class="fa-solid fa-map-location-dot icon-contact"></i>
+                            <p class="phone-adress">
+                                г. Москва ул.  Херсонская, 43 
+                            </p>
+                        </div>
                     </div>
                 </div>
 
             </div>
         </div>
     </section>
+
+    <!-- Абонементы -->
 
     <section class="section-background section-subscriptions">
         <div class="container">
@@ -322,14 +334,18 @@
         </div>
     </section>
 
-    <section class="container">
-        <div class="subscriptions-img">
-            <p>
-                Первое занятие - бесплатно!
-            </p>
-            <button>
-                Записаться
-            </button>
+    <!-- Баннер первое занятие -->
+
+    <section class="section-background">
+        <div class="container">
+            <div class="banner subscriptions-img">
+                <p class="title-banner">
+                    Первое занятие - бесплатно!
+                </p>
+                <button class="btn-yellow">
+                    Записаться
+                </button>
+            </div>
         </div>
 
         <div class="subscriptions-list">
